--- a/Software Engineering 1.ipynb
+++ b/Software Engineering 1.ipynb
@@ -98,11 +98,14 @@
     "## 4. Version Control:\n",
     "\n",
     "    Why?\n",
-    "    - Tocollaborate with each other\n",
-    "    1. Scenario #1\n",
+    "    - To collaborate with each other\n",
+    "    - Making changes safe and fast.\n",
+    "    - Dealing with manager it-ntersection\n",
+    "    \n",
+    "    Create and switch to a new branch called demographic from the develop branch\n",
     "\n",
-    "Let's walk through the Git commands that go along with each step in the scenario you just observed in the video.\n",
-    "Step 1: You have a local version of this repository on your laptop, and to get the latest stable version, you pull from the develop branch.\n",
+    "`git checkout -b demographic`\n",
+    "\n",
     "\n",
     "    Switch to the develop branch\n",
     "`git checkout develop`\n",
@@ -111,57 +114,17 @@
     "\n",
     "`git pull`\n",
     "\n",
-    "Step 2: When you start working on this demographic feature, you create a new branch called demographic, and start working on your code in this branch.\n",
-    "\n",
-    "    Create and switch to a new branch called demographic from the develop branch\n",
-    "\n",
-    "`git checkout -b demographic`\n",
-    "\n",
     "    Work on this new feature and commit as you go\n",
     "\n",
     "`git commit -m 'added gender recommendations`\n",
-    "`git commit -m 'added location specific recommendations'\n",
-    "    ...\n",
-    "\n",
-    "Step 3: However, in the middle of your work, you need to work on another feature. So you commit your changes on this demographic branch, and switch back to the develop branch.\n",
-    "\n",
-    "    Commit your changes before switching\n",
-    "\n",
-    "    git commit -m 'refactored demographic gender and location recommendations '\n",
-    "\n",
-    "    Switch to the develop branch\n",
-    "\n",
-    "    git checkout develop\n",
-    "\n",
-    "Step 4: From this stable develop branch, you create another branch for a new feature called friend_groups.\n",
-    "\n",
-    "    Create and switch to a new branch called friend_groups from the develop branch\n",
-    "\n",
-    "    git checkout -b friend_groups\n",
-    "\n",
-    "Step 5: After you finish your work on the friend_groups branch, you commit your changes, switch back to the development branch, merge it back to the develop branch, and push this to the remote repository’s develop branch.\n",
-    "\n",
-    "    Commit your changes before switching\n",
-    "\n",
-    "    git commit -m 'finalized friend_groups recommendations '\n",
-    "\n",
-    "    Switch to the develop branch\n",
-    "\n",
-    "    git checkout develop\n",
     "\n",
     "    Merge the friend_groups branch into the develop branch\n",
     "\n",
-    "    git merge --no-ff friends_groups\n",
+    "`git merge --no-ff friends_groups`\n",
     "\n",
     "    Push to the remote repository\n",
     "\n",
-    "    git push origin develop\n",
-    "\n",
-    "Step 6: Now, you can switch back to the demographic branch to continue your progress on that feature.\n",
-    "\n",
-    "    Switch to the demographic branch\n",
-    "\n",
-    "    git checkout demographic\n",
+    "`git push origin develop`\n",
     "\n"
    ]
   },
