Logging and testing

--- a/Software Eng2.ipynb
+++ b/Software Eng2.ipynb
@@ -14,7 +14,7 @@
     "## 1. Testing:\n",
     "\n",
     "**Def of test driven development** : \n",
-    "    Writing Tests besfore developing code to implement tasks.\n",
+    "    <p>Writing Tests besfore developing code to implement tasks.</p>\n",
     "**Data science problems:** \n",
     "1. Bad Encoding\n",
     "2. Inappropriate Features\n",
@@ -30,6 +30,44 @@
     "      - Create test_ file and git tests function with asserts inside it.\n",
     "      - Every dot means a 1 test wass suuccessful.\n",
     "      - Enter pytest in the file dirctory."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Logging:\n",
+    "\n",
+    "**Def:**\n",
+    "<p>Logging is the process of recording messages to describe events that have occurred while running your software</p> \n",
+    "\n",
+    "**Tips to write a good logging meassages:** \n",
+    "1. Professional and Clear\n",
+    "2. Concise and Normal Capitaliaion\n",
+    "3. Levels of logging:\n",
+    "    - <b>Debug</b>: ANything that happens in the program.\n",
+    "    - <b>Error</b>: Record any error occurs\n",
+    "    - <b>Info</b>: Reoor all actions user or system specific.\n",
+    "4. Provide any useful information."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Code reviews:\n",
+    "\n",
+    "**Questions to ask when reviewing:**\n",
+    "1. Clean and modular?\n",
+    "2. Code effeciency?\n",
+    "3. Tested well ?\n",
+    "4. Logging mesaages?\n",
+    "5. Documanted well?\n",
+    "\n",
+    "**Tips for conducting a Review?:**\n",
+    "1. Use code linter.\n",
+    "2. Esplain and make suggestions\n",
+    "3. Provide code examples."
    ]
   },
   {
