--- a/OOP.ipynb
+++ b/OOP.ipynb
@@ -74,6 +74,57 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Magic Methods**\n",
+    "\n",
+    "- Overriding Default python Behavior.\n",
+    "- Like `__init__` function any fucntion start and end up with __ it's a magic one\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Inheretance:**\n",
+    "\n",
+    "Inhertit Atrr and Methods from the paren class\n",
+    "\n",
+    "**Inheritane Syntax:**\n",
+    "\n",
+    "`class Child(Parent):`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Decorator Functions:**\n",
+    "\n",
+    "Function That Accepts another function as an argment and returns a poiter to an inner wrapper function.\n",
+    "\n",
+    "you can make the decorator accept a positiona and kwargs with \n",
+    "\n",
+    "**arg, \\**kwarg"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Making a package installable:**\n",
+    "\n",
+    "1. Include the files inside a folder carries the package name\n",
+    "2. inside the inner package inster __init__.py file and inclue any code that you want to ru by calling the module\n",
+    "3. beside the folder make setup.py file which include:<hr>\n",
+    "`from setuptools import setup`\n",
+    "    `setup(name= \"\", version = \" \" , Zipsafe = \" \")`\n",
+    "    \n",
+    "and dont forget the . at the header?????"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
